# wordle-solver

./: .gitignore  README.md  pyproject.toml
src/wordle/: anytime.py  cli.py  explain.py  lists.py  mcp_logic.py  mcp_server.py  patterns.py  play.py  scoring.py  solver.py
tests/: test_anytime.py  test_lists.py  test_mcp_logic.py  test_patterns.py  test_scoring.py  test_selfplay.py
