[project]
name = "wordle"
version = "0.1.0"
description = "Wordle solver with frequency-weighted entropy and teaching explanations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "wordfreq>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
wordle = "wordle.cli:app"
wordle-mcp = "wordle.mcp_server:main"

[project.optional-dependencies]
mcp = [
    "mcp>=1.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wordle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
